# flask-nix

./: .gitignore  Dockerfile  docker-compose.yml  movies_json.py  postgres.py  req.txt  run.py
app/: .env  Dockerfile  __init__.py  admin.py  db.py  models.py  postgres.py  pyproject.toml  run.py  settings.py  views copy.py  views.py
app/admin/: routes.py
app/app/: __init__.py  settings.py
app/app/admin/: __init__.py  routes.py  services.py
app/app/api/: __init__.py  auth.py  routes.py  schemas.py  swagger_doc.py
app/app/movies/: __init__.py  models.py  routes.py  services.py
app/app/templates/: index.html  login.html  profile.html  register.html  search.html  user.html
app/app/templates/admin/: index.html  master-extended.html
app/app/templates/include/: filters.html  footer.html  list_card.html  menu.html  search.html  sorted.html
app/app/users/: __init__.py  models.py  routes.py
app/migrations/versions/: 8dfbf130b67d_.py
app/movies/: __init__.py  models.py  services.py
app/templates/: base.html  index copy.html  index.html  login.html  register.html  search.html
app/templates/include/: filters.html  footer.html  list_card.html  menu.html  pagination.html  search.html  sorted.html  sorted_and_search.html
app/tests/: tests.py
app/users/: __init__.py  models.py
migrations/versions/: 0ad8987f8445_.py  12033bf1ee4c_fix_9.py  1d0b6b243786_.py  208dd1a6bd93_.py  372a29d6d0d4_.py  4056d6652103_fix_10.py  4225d157751b_fix.py  44a86c41adc3_.py  463869d2f84c_.py  6ed90d89392f_fix_30.py  (+17 more)
nginx/: Dockerfile  default.conf
postgres/: init.sql
